--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,25 @@
     <div class="col">
       <label><b>Payment Date</b></label>
       <div>
-        {{ date | longDate }}
+        {{ date | date }}
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="form-group col">
+      <label>Payment Amount</label>
+      <input
+        type="number"
+        class="form-control"
+        (input)="onAmountChange($event.target.value)"
+      />
+    </div>
+
+    <div class="col">
+      <label><b>Payment Amount</b></label>
+      <div>
+        {{ amount | currency: "GBP" }}
       </div>
     </div>
   </div>
