--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,4 +50,22 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="form-group col">
+      <label>Height</label>
+      <input
+        type="height"
+        class="form-control"
+        (input)="onHeightChange($event.target.value)"
+      />
+    </div>
+
+    <div class="col">
+      <label><b>Height</b></label>
+      <div>
+        {{ height | number: "1.0-0" }}
+      </div>
+    </div>
+  </div>
 </div>
