--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,4 +68,22 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="form-group col">
+      <label>Miles</label>
+      <input
+        type="miles"
+        class="form-control"
+        (input)="onMilesChange($event.target.value)"
+      />
+    </div>
+
+    <div class="col">
+      <label><b>Kilometers</b></label>
+      <div>
+        {{ miles | convert: 'm' }}
+      </div>
+    </div>
+  </div>
 </div>
